Bug 488126 - For some reason, after updating 5.2.3, when zooming, the canvas display starts behaving in a weird way. When you zoom out a little, the drawn on the canvas fades, but when you zoom out a lot, it disappears altogether
Summary: For some reason, after updating 5.2.3, when zooming, the canvas display start...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resize/Scale Image/Layer (other bugs)
Version First Reported In: 5.2.3-beta1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression, release_blocker
Depends on:
Blocks:
 
Reported: 2024-06-06 18:29 UTC by batrhanma
Modified: 2024-06-12 08:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description batrhanma 2024-06-06 18:29:01 UTC
For some reason, after updating 5.2.3, when zooming, the canvas display starts behaving in a weird way. When you zoom out a little, the drawn on the canvas fades, but when you zoom out a lot, it disappears altogether
Comment 1 Dmitry Kazakov 2024-06-07 14:13:35 UTC
I can reproduce the issue locally...
Comment 2 Dmitry Kazakov 2024-06-12 08:32:39 UTC
Git commit de655f2a6154a507bfe7ea3289a7d241e293f276 by Dmitry Kazakov.
Committed on 12/06/2024 at 08:31.
Pushed by dkazakov into branch 'master'.

Fix canvas fade-out when in 16-bit-uint mode on Angle

We shouldn't rely on QT_OPENGL_ES_2_ANGLE definition, since it
is defined only when Qt builds **its own** Angle library (and when
Win10-SDK is found). Since we don't build Qt's angle we should
rely on upstream EGL_ANGLE_platform_angle instead.

M  +9    -2    libs/ui/opengl/kis_opengl_image_textures.cpp

https://invent.kde.org/graphics/krita/-/commit/de655f2a6154a507bfe7ea3289a7d241e293f276
Comment 3 Dmitry Kazakov 2024-06-12 08:48:14 UTC
Git commit 22205bc612b622f0a3900dbb2f1e3150cff26eab by Dmitry Kazakov.
Committed on 12/06/2024 at 08:48.
Pushed by dkazakov into branch 'krita/5.2'.

Fix canvas fade-out when in 16-bit-uint mode on Angle

We shouldn't rely on QT_OPENGL_ES_2_ANGLE definition, since it
is defined only when Qt builds **its own** Angle library (and when
Win10-SDK is found). Since we don't build Qt's angle we should
rely on upstream EGL_ANGLE_platform_angle instead.


(cherry picked from commit de655f2a6154a507bfe7ea3289a7d241e293f276)

Co-authored-by: Dmitry Kazakov <dimula73@gmail.com>

M  +9    -2    libs/ui/opengl/kis_opengl_image_textures.cpp

https://invent.kde.org/graphics/krita/-/commit/22205bc612b622f0a3900dbb2f1e3150cff26eab