Fix canvas fade-out when in 16-bit-uint mode on Angle

We shouldn't rely on QT_OPENGL_ES_2_ANGLE definition, since it
is defined only when Qt builds **its own** Angle library (and when
Win10-SDK is found). Since we don't build Qt's angle we should
rely on upstream EGL_ANGLE_platform_angle instead.

BUG:488126


(cherry picked from commit de655f2a6154a507bfe7ea3289a7d241e293f276)

Co-authored-by: Dmitry Kazakov <dimula73@gmail.com>